fix the height of cards and position of messages on small and big screens

--- a/src/sass/_aside.scss
+++ b/src/sass/_aside.scss
@@ -207,6 +207,7 @@
     align-content: center;
     background-color: $color-primary3;
     justify-content: flex-end;
+    height: 5rem;
     .btn--page {
       display: flex;
       // flex-basis: 50%;
