--- a/src/sass/_components.scss
+++ b/src/sass/_components.scss
@@ -114,11 +114,11 @@
 %message {
   display: flex;
   justify-content: center;
-  width: 100%;
-  max-width: 1000px;
+  // width: 100%;
+  // max-width: 1000px;
   color: $color-primary;
   font-size: 2.3rem;
-  align-items: center;
+  // align-items: center;
   padding: 1.5rem;
   background-color: $color-primary3;
   // position: relative;
