--- a/src/sass/_content.scss
+++ b/src/sass/_content.scss
@@ -27,27 +27,20 @@
   }
 
   .message-nogroup {
-    // margin: 0 auto;
-    // width: 50%;
-    // max-width: 1000px;
-    // max-height: 25rem;
-    // position: absolute;
-    // top: 50vh;
-    // left: 50vw;
-    // transform: translate(-25%, 0%);
-    // z-index: 10;
-    position: fixed;
     z-index: 999;
-
-    // height: auto;
+    position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-25%, 0%);
+    transform: translate(-21%, -120%);
     @media only screen and (max-width: $bp-large) {
       background-color: $color-primary;
       color: $color-secondary3;
       transform: translate(-50%, 0%);
-      // width: 75%;
+      position: fixed;
+      width: 80%;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, 0%);
     }
 
     p {
